--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,97 @@
+body {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+:focus-visible {
+    outline: 0;
+}
+
 .base_content {
     text-align: center;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px; /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+}
+
+nav {
+    box-shadow: rgba(4, 17, 29, 0.25) 0px 0px 8px 0px;
+    max-width: 100vw;
+    height: 72px;
+    top: 0px;
+    position: sticky;
+    z-index: 110;
+    transition: top 0.5s ease 0s;
+    background-color: rgb(255, 255, 255);
+}
+
+nav .container {
+    display: flex;
+    padding: 5px 15px;
+    align-items: center;
+}
+
+nav .logo {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.logo_wrapper {
+    padding-right: 189px;
+    display: flex;
+    align-items: center;
+
+}
+
+nav input {
+    border: 0;
+    padding-left: 5px;
+    width: -webkit-fill-available;
+}
+
+.input_wrapper {
+    cursor: text;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border: 1px solid rgb(229, 232, 235);
+    width: 700px;
+    padding: 12px;
+    height: 25px;
+}
+nav .icons{
+    padding-left: 521px;
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+}
+nav .icons i {
+    font-size: 35px;
+    padding: 0 20px;
 }
