--- a/templates/market/main.html
+++ b/templates/market/main.html
@@ -4,11 +4,12 @@
 
 {#타이틀 넣는 곳#}
 {% block title %}
-main
+    main
 {% endblock %}
 
 {# css 파일 넣는 곳#}
 {% block css %}
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
 
 {% endblock %}
 
@@ -19,6 +20,10 @@ main
 
 {#메인 컨텐츠 들어가는 곳#}
 {% block content %}
-
+    <div class="background_img" style="background-image: url({% static '/img/칸딘 후추1.png' %});"></div>
+    <div class="main_img_wrapper">
+        <img class="main_img" src="{% static '/img/칸딘 후추1.png' %}">
+        <footer class="main_footer">칸딘 후추 - 광민 & 지훈</footer>
+    </div>
 {% endblock %}
 
