--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,13 +14,14 @@
 
 .main_footer {
     height: 50px;
-    padding: 10px;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
 }
 
 .main_img_wrapper {
     box-shadow: rgb(4 17 29 / 25%) 0px 0px 10px 0px;
     border-radius: 10px;
-    margin: 2% 0;
 }
 
 .main_img {
@@ -28,4 +29,38 @@
     border-top-right-radius: 10px;
     border-bottom-right-radius: 0px;
     border-bottom-left-radius: 0px;
+}
+.main_text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 5%;
+
+}
+
+.main_container{
+    margin: 2% 0;
+    z-index: 1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+h1{
+    font-size: 40px;
+}
+span{
+    font-size: 24px;
+    color: #747474;
+}
+.main_profile_img{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+}
+.main_img_des{
+    margin-left: 5%;
+    text-align: left;
+    font-weight: bold;
 }
