update - main.html, base.html base.css main.css drawing, search/ urls, views add - search.html, upload.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,7 @@ a {
     text-align: center;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .material-icons {
