--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,3 +64,11 @@ span{
     text-align: left;
     font-weight: bold;
 }
+
+.start_btn{
+    all: unset;
+    width: 150px;
+    height: 50px;
+    background-color: cornflowerblue;
+    border-radius: 24px;
+}
