--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,7 @@ a {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
 }
 
 .material-icons {
