update - base/ html css main/ css html ex.html notifications/models.py add - drawing/ html js css

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,14 @@
                 <input name="input"></form>
         </div>
         <div class="icons">
-            <i class="material-icons">notifications_none</i>
+            <div class="dropdown">
+                <button class="dropbtn"><i class="material-icons">notifications_none</i></button>
+                <div class="dropdown-content">
+                    <a href="#">알림 1</a>
+                    <a href="#">알림 2</a>
+                    <a href="#">알림 3</a>
+                </div>
+            </div>
             <i class="material-icons">account_circle</i>
             {#                <i class="material-icons">notifications_active</i>#}
 
