--- a/templates/ex.html
+++ b/templates/ex.html
@@ -9,12 +9,12 @@
 
 {# css 파일 넣는 곳#}
 {% block css %}
-
+{#        <link rel="stylesheet" href="{% static '/css/해당앱.css' %}">#}
 {% endblock %}
 
 {#자바스크립트 파일 넣는 곳#}
 {% block js %}
-
+{#<script type="text/javascript" src="{% static '/js/해당앱.js' %}"></script>#}
 {% endblock %}
 
 {#메인 컨텐츠 들어가는 곳#}
