--- a/static/css/base.css
+++ b/static/css/base.css
@@ -76,7 +76,6 @@ nav .logo {
     padding-right: 20%;
     display: flex;
     align-items: center;
-
 }
 
 nav input {
@@ -101,6 +100,7 @@ nav .icons {
     width: 200px;
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 nav .icons i {
@@ -108,3 +108,50 @@ nav .icons i {
     padding: 0 20px;
 
 }
+
+/*헤더 드랍 다운 메뉴*/
+
+.dropbtn {
+    background-color: rgb(255, 255, 255);
+    color: white;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: flex;
+    height: 72px;
+    align-items: center;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    top: 100%;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: rgb(255, 255, 255);
+}
+
