update - base/ html css main/ css html ex.html notifications/models.py add - drawing/ html js css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,9 @@ a {
 :focus-visible {
     outline: 0;
 }
-
+.hidden{
+    display: none;
+}
 .base_content {
     text-align: center;
     display: flex;
