--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -1,3 +1,48 @@
-.input_container{
-    width: 300px;
+.upload_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+.input_container{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+.input_container img {
+    width: 600px;
+    height: 600px;
+}
+
+.style_box{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.style_box img{
+    width: 150px;
+    height: 150px;
+    transition: all 0.2s linear;
+}
+
+.style_box img:hover{
+    transform: scale(1.5,1.5);
+}
+
+#select_box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.transfer {
+    display: flex;
+    margin: 1%;
+}
+
