--- a/templates/drawing/upload.html
+++ b/templates/drawing/upload.html
@@ -17,9 +17,11 @@
     <script>
         function posting() {
             let file = $('#select_file')[0].files[0]
-            let num = $('#select_num').val()
-            let key = $('#select_key').val()
+            var num = $('input[name=style]:checked').val();
+            let file_id = document.getElementById('select_file').value.split('\\')[2].split('.')[0]
+            let key = String(new Date().getTime()) + file_id
             let form_data = new FormData()
+
 
             form_data.append("img", file)
             form_data.append("num", num)
@@ -51,12 +53,68 @@
 
 {#메인 컨텐츠 들어가는 곳#}
 {% block content %}
-    <div class="input_container">
-    <input type="file" id="select_file">
-    <input type="number" id="select_num">
-    <input type="text" id="select_key">
-    <button onclick="posting()">업로드</button>
+    <div class="upload_container">
+        <div class="input_container">
+            <img src={% static '/img/디폴트.jpeg' %}>
+            <input type="file" id="select_file">
+        </div>
+        <div class="style_box">
+            <div id="select_box">
+                <img src="{% static '/img/칸딘스키.jpeg' %}">
+                <input type="radio" id="select_num" name="style" value="1">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/피카소.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="2">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/고흐.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="3">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/밥로스.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="4">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/호크니.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="5">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/뭉크.jpeg' %}>
+                <input type="radio" id="select_num" value="6">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/옛날.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="7">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/점묘.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="8">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/모네.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="9">
+            </div>
+
+            <div id="select_box">
+                <img src={% static '/img/고흐2.jpeg' %}>
+                <input type="radio" id="select_num" name="style" value="10">
+            </div>
+        </div>
+
+    </div>
+    <div class="transfer">
+        <button onclick="posting()">create</button>
     </div>
     <div id="output"></div>
+
 {% endblock %}
 
