--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -1,41 +1,34 @@
 .upload_container {
+    margin-top: 1%;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-.input_container{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 3%;
+
+.img_container img {
+    max-width: 500px;
+    max-height: 500px;
 }
 
-.input_container img {
-    width: 600px;
-    height: 600px;
-}
-
-.style_box{
+#style_box{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.style_box img{
+#style_box img{
     width: 150px;
     height: 150px;
     transition: all 0.2s linear;
 }
 
-.style_box img:hover{
+#style_box img:hover{
     transform: scale(1.5,1.5);
 }
 
-#select_box{
+.select_box{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,3 +39,101 @@
     margin: 1%;
 }
 
+.img_container{
+    width: 70%;
+    height: 550px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.empty_div{
+    width: 500px;
+    height: 500px;
+    border: 0;
+    border-radius: 20px;
+    background-color: #cfcfcff0;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    font-size: 10rem;
+    font-weight: bold;
+}
+.input_container,.style_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.img_container p{
+    font-size: 24px;
+    font-weight: bold;
+}
+.label_select{
+    box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+    color: white;
+    background-color: cornflowerblue;
+    border-radius: 24px;
+    padding: 1%;
+}
+#img_options{
+    display: flex;
+    margin: 2% 0 1% 0;
+    width: 70%;
+    justify-content: space-evenly;
+}
+.label_select:hover {
+    transform: scale(0.95);
+}
+
+.move_right{
+    transition: transform 1s;
+    transform: translateX(672px);
+}
+.move_left{
+    transition: transform 1s;
+    transform: translateX(-672px);
+}
+.input_img_wrapper, .style_img_wrapper{
+    width: 500px;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+}
+.input_img_wrapper:hover {
+    transform: scale(0.95);
+}
+.style_img_wrapper:hover {
+    transform: scale(0.95);
+}
+.empty_div:hover {
+    transform: scale(0.95);
+}
+
+.fade-out-box {
+  animation: fadeout 2s;
+  -webkit-animation: fadeout 2s; /* Safari and Chrome */
+  animation-fill-mode: forwards;
+}
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        display: none;
+    }
+}
+@-webkit-keyframes fadeout { /* Safari and Chrome */
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        display: none;
+    }
+}
+.small_box{
+
+}
