--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %} | GRIMFARM</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
+    <link href="/static/img/파비콘.PNG" rel="shortcut icon" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet">
@@ -34,7 +35,7 @@
         {% endif %}
         <div class="input_wrapper">
             <i class="material-icons">search</i>
-            <form  method="GET" action="/search/">
+            <form method="GET" action="/search/">
                 {% csrf_token %}
                 <input name="search"></form>
         </div>
