--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -1,4 +1,4 @@
-.upload_container {
+#upload_container {
     margin-top: 1%;
     width: 100%;
     display: flex;
@@ -12,23 +12,23 @@
     max-height: 500px;
 }
 
-#style_box{
+#style_box {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-#style_box img{
+#style_box img {
     width: 150px;
     height: 150px;
     transition: all 0.2s linear;
 }
 
-#style_box img:hover{
-    transform: scale(1.5,1.5);
+#style_box img:hover {
+    transform: scale(1.5, 1.5);
 }
 
-.select_box{
+.select_box {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,14 +39,15 @@
     margin: 1%;
 }
 
-.img_container{
+.img_container {
     width: 70%;
     height: 550px;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
-.empty_div{
+
+.empty_div {
     width: 500px;
     height: 500px;
     border: 0;
@@ -61,61 +62,75 @@
     font-size: 10rem;
     font-weight: bold;
 }
-.input_container,.style_container{
+
+.input_container, .style_container {
     display: flex;
     flex-direction: column;
 }
 
-.img_container p{
+.img_container p {
     font-size: 24px;
     font-weight: bold;
 }
-.label_select{
+
+.label_select {
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     color: white;
     background-color: cornflowerblue;
     border-radius: 24px;
     padding: 1%;
 }
-#img_options{
+
+#img_options {
     display: flex;
     margin: 2% 0 1% 0;
     width: 70%;
     justify-content: space-evenly;
 }
+
 .label_select:hover {
     transform: scale(0.95);
 }
 
-.move_right{
+.move_right {
     transition: transform 1s;
     transform: translateX(672px);
 }
-.move_left{
+
+.move_left {
     transition: transform 1s;
     transform: translateX(-672px);
 }
-.input_img_wrapper, .style_img_wrapper{
+
+.input_img_wrapper, .style_img_wrapper {
     width: 500px;
     height: 500px;
     align-items: center;
     justify-content: center;
 }
+
 .input_img_wrapper:hover {
     transform: scale(0.95);
 }
+
 .style_img_wrapper:hover {
     transform: scale(0.95);
 }
+
+#style_img, #input_img {
+    box-shadow: rgb(4 17 29 / 25%) 0px 0px 30px 15px;
+}
+
 .empty_div:hover {
     transform: scale(0.95);
 }
 
 .fade-out-box {
-  animation: fadeout 2s;
-  -webkit-animation: fadeout 2s; /* Safari and Chrome */
-  animation-fill-mode: forwards;
+    animation: fadeout 1s;
+    -webkit-animation: fadeout 1s; /* Safari and Chrome */
+    animation-fill-mode: forwards;
 }
+
 @keyframes fadeout {
     from {
         opacity: 1;
@@ -125,6 +140,7 @@
         display: none;
     }
 }
+
 @-webkit-keyframes fadeout { /* Safari and Chrome */
     from {
         opacity: 1;
@@ -134,6 +150,138 @@
         display: none;
     }
 }
-.small_box{
 
+.fade-in-box {
+    animation: fadein 3s;
+    -webkit-animation: fadein 3s; /* Safari and Chrome */
+}
+
+@keyframes fadein {
+    0% {
+        opacity: 0;
+        transform: translateY(0px);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(100px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    0% {
+        opacity: 0;
+        transform: translateY(0px);
+    }
+    50% {
+        opacity: 1;
+        transform: translateY(100px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+
+.small_box {
+    transition: 1s;
+    transform: scale(0.5) translateY(300px) rotate(360deg);
+}
+
+#move_div {
+    position: absolute;
+    top: 15vw;
+    transform-origin: center;
+    align-items: center;
+    justify-content: center;
+    animation: rotate 2s ease forwards;
+}
+
+.move {
+    background: red;
+    position: relative;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+.move:nth-child(1) {
+    left: -240px;
+    animation: slideleft 2s ease forwards;
+}
+
+.move:nth-child(2) {
+    left: 240px;
+    animation: slideright 2s ease forwards;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(720deg);
+    }
+}
+
+@keyframes slideleft {
+    0% {
+        transform: translatex(0px) scale(0.5) rotate(0deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translatex(430px) scale(0.1) rotate(720deg);
+        opacity: 0;
+    }
+}
+
+@keyframes slideright {
+    0% {
+        transform: translatex(0px) scale(0.5) rotate(0deg);
+        opacity: 1;
+    }
+    100% {
+        transform: translatex(-430px) scale(0.1) rotate(720deg);
+        opacity: 0;
+    }
+}
+
+#output {
+    margin-top: 5%;
+}
+
+.output_btns {
+    margin-top: 5%;
+    display: none;
+    width: 500px;
+    justify-content: space-evenly;
+}
+
+.fade-in-box1 {
+    animation: fadein1 3s;
+    -webkit-animation: fadein1 3s; /* Safari and Chrome */
+}
+
+@keyframes fadein1 {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadein1 { /* Safari and Chrome */
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.img_rotate3d {
+    transition: 0.5s;
+    transform: rotate3d(1, 1, 1, 360deg);
 }
