--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,7 @@ a {
     background-color: cornflowerblue;
     border-radius: 24px;
     padding: 1%;
+    cursor: pointer;
 }
 .base_content button:hover {
     transform: scale(0.95);
