--- a/templates/drawing/upload.html
+++ b/templates/drawing/upload.html
@@ -22,39 +22,66 @@
     <div id="upload_container">
         <div class="img_container">
             <div class="input_container">
-                <p id="input_p">이미지</p>
+                <p id="input_p">Image</p>
                 <div id="empty_img" class="empty_div">X</div>
                 <div id="input_img_wrapper" class="input_img_wrapper hidden">
-                    <img id="input_img" src="/1">
+                    <img id="input_img" src="1">
                 </div>
             </div>
             <div class="style_container">
-                <p id="style_p">스타일</p>
+                <p id="style_p">Style</p>
                 <div id="empty_style" class="empty_div">X</div>
                 <div id="style_img_wrapper" class="style_img_wrapper hidden">
-                    <img id="style_img" src="/1">
+                    <img id="style_img" src="1">
                 </div>
             </div>
         </div>
         <div id="img_options">
             <label class="label_select" for="select_file">
-                image from local
+                Image from local
             </label>
             <input type="file" id="select_file" class="hidden" accept="image/gif,image/jpeg,image/png"
                    onchange="loadFile(this)">
-            <button>image from url</button>
-            <button>image drawing</button>
-            <button onclick="img_style_change()">image style change</button>
-            <button>style from url</button>
-            <button onclick="posting1()">create new thing</button>
+            <button onclick="url_img()">Image from url</button>
+            <button onclick="go_drawing()">Image drawing</button>
+            <button onclick="img_style_change()">Image style change</button>
+            <button onclick="url_style()">Style from url</button>
+            <button onclick="posting1()">Create new thing</button>
         </div>
         <div id="style_box">
             {% for style in styles %}
                 <div class="select_box">
                     <img src="{{ style.url }}" onclick="click_style(this)">
-                    <span>{{ style.title }}</span>
+                    <p>{{ style.title }}</p>
                 </div>
             {% endfor %}
+        </div>
+    </div>
+    <div id="drawing" class="hidden">
+        <canvas id="jsCanvas" class="canvas"></canvas>
+        <div class="controls">
+            <div class="controls_range">
+                <input type="range" id="jsRange" min="0.1" max="20.0" value="10" step="0.1">
+            </div>
+            <div class="controls_colors" id="jsColors">
+                <div class="controls_color jsColor" style="background-color: #2c2c2c;"></div>
+                <div class="controls_color jsColor" style="background-color: white;"></div>
+                <div class="controls_color jsColor" style="background-color: #FF3B30;"></div>
+                <div class="controls_color jsColor" style="background-color: #ff9500;"></div>
+                <div class="controls_color jsColor" style="background-color: #FFCC00;"></div>
+                <div class="controls_color jsColor" style="background-color: #4CD963;"></div>
+                <div class="controls_color jsColor" style="background-color: #5AC8FA;"></div>
+                <div class="controls_color jsColor" style="background-color: #0579FF;"></div>
+                <div class="controls_color jsColor" style="background-color: #5856D6;"></div>
+            </div>
+            <div class="controls_btns">
+                <button id="jsClear">Clear</button>
+                <button id="jsMode">Fill</button>
+                <button id="jsSave">Save</button>
+                <button id="jsImage">To image</button>
+                <button id="jsStyle">To style</button>
+                <button id="jsBack">Back</button>
+            </div>
         </div>
     </div>
     <div id="move_div" class="hidden">
@@ -62,11 +89,12 @@
         <img id="move2" class="move" src="">
     </div>
     <div id="output" class="hidden">
-        <img src="{% static '/img/칸딘 후추1.png' %}">
+        <img id="output_img" src="{% static '/img/칸딘 후추1.png' %}">
         <div id="output_btns" class="output_btns" class="output_btns">
-            <button>retry</button>
-            <button>save</button>
-            <button>sell</button>
+            <button onclick="window.location.reload()">Retry</button>
+            <button onclick="download_img()">Download</button>
+            <button>Save</button>
+            <button>Sell</button>
         </div>
     </div>
 {% endblock %}
