--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ a {
     all:unset;
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     color: white;
-    background-color: cornflowerblue;
+    background-color: #8685EF;
     border-radius: 24px;
     padding: 1%;
     cursor: pointer;
